Prepared for first blog post, changed some overflow fixes stuff

--- a/static/css/card.css
+++ b/static/css/card.css
@@ -24,7 +24,7 @@
 }
 
 .card:hover {
-    box-shadow: 0px 0px 15px white;
+    box-shadow: 0px 0px 15px var(--link-white);
 }
 
 .title-section {
@@ -56,7 +56,7 @@
 
 .pin {
     vertical-align: text-bottom;
-    height: 1em;
+    height: 1.1em;
 }
 
 @media (max-width: 800px) {
