--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,29 +1,3 @@
-/* .chip {
-  padding: 0.6em 1em;
-  line-height: 150%;
-
-  border: 2px solid rgb(120, 0, 120);
-  transition: ease-in-out 0.2s;
-  background-color: black;
-  color: white;
-  border-radius: 5px;
-
-  text-decoration: none;
-}
-
-.chip:hover {
-  border: 2px solid rgb(100, 0, 100);
-} */
-
 main {
   margin-top: 10px;
-}
-
-code {
-  font-family: "Ubuntu Mono", monospace;
-  font-size: 12pt;
-  border: 2px solid rgb(50, 50, 50);
-  border-radius: 5px;
-  background: rgb(25, 25, 25);
-  line-height: 1.4em;
 }
